--- a/index.html
+++ b/index.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZaLand</title>
-  <!-- Main stylesheet -->
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <!-- Welcome overlay shown for the first three seconds -->
-  <div id="welcome" class="welcome-overlay">
-    <div class="welcome-text">Welcome to ZaLand</div>
-  </div>
-
-  <!-- Main application container -->
-  <main id="main" class="hidden">
-    <div class="container">
-      <!-- Title -->
-      <h1 class="title">ZaLand Habit Tracker</h1>
-      <!-- Input section for the user to enter their name -->
-      <div class="input-section">
-        <label for="nameInput">Enter your name:</label>
-        <input id="nameInput" type="text" placeholder="Your name" autocomplete="off">
-        <button id="startButton">Get My Habits</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>indikator – Interactive Trading Dashboard</title>
+    <!-- Load Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-aEmsAAbz6dGHcH/xkLKZ82mH8tqV1HTzrg/4J65X0JXB1kPj8dGcwVW98m5s8Nch+1L7p7YUJxyZtla7RrxPA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Main stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- TradingView Lightweight Charts -->
+    <script src="https://cdn.jsdelivr.net/npm/lightweight-charts@3.8.0/dist/lightweight-charts.standalone.production.js"></script>
+  </head>
+  <body>
+    <div id="app">
+      <!-- Header with add button -->
+      <header class="app-header">
+        <div class="logo">indikator</div>
+      <button id="add-stock" class="icon-button" title="Add stock">+</button>
+      </header>
+      <!-- Chart container -->
+      <div id="chart-wrapper">
+        <div id="chart"></div>
+        <!-- Command input -->
+        <div id="command-bar">
+          <input type="text" id="command-input" placeholder="Ask Indikator..." autocomplete="off" />
+        </div>
+        <!-- Fullscreen button -->
+        <button id="fullscreen-btn" class="icon-button" title="Fullscreen">FS</button>
       </div>
-      <!-- Section where the poem and tasks will appear -->
-      <div id="result" class="result-section hidden">
-        <div id="poem" class="poem"></div>
-        <h2 class="tasks-header">Your Daily Habits</h2>
-        <ul id="tasks" class="tasks-list"></ul>
-        <!-- Inlined advertisement banner placed alongside the tasks.  This ensures the ad sits neatly
-             within the content area without overlapping other elements. -->
-        <div class="ad-banner inlined">
-          <img src="ad.jpg" alt="Ad banner" />
+      <!-- Watchlist -->
+      <aside id="watchlist">
+        <h3>Watchlist</h3>
+        <ul id="watchlist-items"></ul>
+      </aside>
+      <!-- Market Sentiment Box (hidden by default) -->
+      <aside id="sentiment-box" class="hidden">
+        <h3>Market Sentiment</h3>
+        <ul id="sentiment-items"></ul>
+        <div id="sentiment-actions" class="hidden">
+          <button id="market-buy" class="action-button buy hidden">MARKET BUY</button>
+          <button id="market-sell" class="action-button sell hidden">MARKET SELL</button>
+        </div>
+      </aside>
+      <!-- Search Overlay -->
+      <div id="search-overlay" class="hidden">
+        <div class="search-container">
+          <input type="text" id="search-input" placeholder="Search for a stock..." />
+          <ul id="search-results"></ul>
         </div>
       </div>
     </div>
-
-    <!-- Handle for pulling up the projector screen.  Users drag the rope to reveal the game page. -->
-    <div id="projectorHandle" class="projector-handle">
-      <div class="rope"></div>
-      <div class="handle"></div>
-    </div>
-
-    <!-- Projector screen that slides up from the bottom when the rope is pulled.  Contains the game canvas. -->
-    <div id="projectorScreen" class="projector-screen hidden">
-      <div class="game-wrapper">
-        <canvas id="gameCanvas"></canvas>
-        <div class="game-ui">
-          <span id="score">Score: 0</span>
-          <button id="closeGame" class="close-game">Close</button>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <!-- JavaScript for interactivity -->
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
